# prelegal-1

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: database.py  deps.py  document_registry.py  main.py  pyproject.toml
backend/models/: document_share.py  document_version.py  party.py  saved_document.py  signing_session.py  user.py
backend/routers/: auth.py  chat.py  documents.py  docx.py  explain.py  parties.py  pdf.py  review.py  share.py  signing.py
backend/schemas/: auth.py  chat.py  document.py  explain.py  nda.py  review.py  share.py
backend/services/: auth_service.py  chat_service.py  document_service.py  docx_service.py  email_service.py  explain_service.py  party_service.py  pdf_service.py  review_service.py  share_service.py  signing_service.py
backend/templates/: _cover_base.html  ai-addendum_cover.html  business-associate-agreement_cover.html  cloud-service-agreement_cover.html  data-processing-agreement_cover.html  design-partner-agreement_cover.html  mutual-nda_cover.html  nda_pdf.html  partnership-agreement_cover.html  pilot-agreement_cover.html  professional-services-agreement_cover.html  service-level-agreement_cover.html  software-license-agreement_cover.html
backend/tests/: conftest.py  test_auth_router.py  test_auth_routes.py  test_auth_service.py  test_chat_router.py  test_dependencies.py  test_documents_router.py  test_docx_router.py  test_explain_router.py  test_parties_router.py  test_pdf_router.py  test_pdf_service.py  test_review_router.py  test_security.py  test_share_router.py  test_signing_router.py  (+1 more)
(+46 files in other folders)
