[project]
name = "prelegal-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "weasyprint>=62",
    "jinja2>=3.1",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "itsdangerous>=2.1",
    "bcrypt>=4.0",
    "litellm>=1.50",
    "markdown>=3.5",
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", ".venv/*"]
